--- a/index.html
+++ b/index.html
@@ -152,11 +152,22 @@
        <img src="bg_stain.svg" alt="mancha">
     </div>
     <div class="section_12">
-        <canvas id="section_canvas_12"></canvas>
         <section>
-            <div class="section_12--description">
-               
-            </div>
+            <div class="carousel" data-carousel>
+                <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
+                <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+                <ul data-slides>
+                  <li class="slide" data-active>
+                    <img src="https://source.unsplash.com/78A265wPiO4" alt="Nature Image #1">
+                  </li>
+                  <li class="slide">
+                    <img src="https://source.unsplash.com/eOpewngf68w" alt="Nature Image #2">
+                  </li>
+                  <li class="slide">
+                    <img src="https://source.unsplash.com/ndN00KmbJ1c" alt="Nature Image #3">
+                  </li>
+                </ul>
+              </div>
         </section>    
     </div>
     <div class="section_13">
