--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <canvas id="section_canvas_7"></canvas>
         <section>
             <div class="section_7--container_info">
-                <img src="lugar.svg" alt="informacion" >
+                <img src="lugar_2.svg" alt="informacion" >
                 <button></button>
             </div>
         </section>
