--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
        <img src="gift.svg"  alt="regalo">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
+       <button></button>
     </div>
     <div class="section_12">
         <section>
@@ -188,7 +189,7 @@
         </div>
         <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
-       <img src="wait_here.svg" alt="final_invitation">
+       <img src="last_img.svg" alt="final_invitation">
     </div>
 </body>
 </html>
