--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
-       <img src="last_img.svg" alt="final_invitation">
+       <img src="last_img_2.svg" alt="final_invitation">
     </div>
 </body>
 </html>
