--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <div ></div>
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
-       <img src="casamos.svg"  alt="nos casamos">
+       <img src="married.svg"  alt="nos casamos">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
@@ -91,7 +91,7 @@
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
         <section>
-            <img src="assist_date.svg" alt="asistencia">
+            <img src="text_6.svg" alt="asistencia">
         </section>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
@@ -110,7 +110,7 @@
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
         <section>
-           <img src="info_place.svg" alt="lugar de fiesta">
+           <img src="text_8_fix.svg" alt="lugar de fiesta">
            <button></button>
         </section>
        <img src="bg_stain.svg" alt="mancha">
@@ -120,7 +120,7 @@
         <canvas id="section_canvas_9"></canvas>
         <section>
             <div class="section_9--description">
-                <img src="assist.svg" alt="confirmar asistencia">
+                <img src="text_9.svg" alt="confirmar asistencia">
                 <div>
                     <button></button>
                     <button></button>
@@ -147,7 +147,7 @@
         <div ></div>
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
-       <img src="gift.svg"  alt="regalo">
+       <img src="table.svg"  alt="regalo">
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
        <button></button>
@@ -159,7 +159,7 @@
                 <button class="carousel-button next" data-carousel-button="next">&#10093;</button>
                 <ul data-slides>
                   <li class="slide" data-active>
-                    <img src="https://source.unsplash.com/78A265wPiO4" alt="Nature Image #1">
+                    <img src="text_12.png" alt="Nature Image #1">
                   </li>
                   <li class="slide">
                     <img src="https://source.unsplash.com/eOpewngf68w" alt="Nature Image #2">
@@ -173,7 +173,7 @@
     </div>
     <div class="section_13">
         <canvas id="section_canvas_13"></canvas>
-        <img src="hours.svg" alt="intineriario" class="img_hours">
+        <img src="text_13.svg" alt="intineriario" class="img_hours">
         <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
