--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
         <div>
             <span class="section_2--background_card"></span>
         </div>
-        <p></p>
+        <main>
+            <button></button>
+        </main>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
