--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <canvas class="circle_times_animation_4"></canvas>
             </div>
         </div>
+        <img src="sobre-pattern.png" alt="sobre" class="section_1--card">
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" ></canvas>
