--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container_canvas" class="section_1">
         <canvas id="logoCanvas" class="canvas_target"></canvas>
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
-        <div class="section_1--counter"><!--Agregar un canvas aqui dentro para las animaciones-->
+        <div class="section_1--counter">
             <div>
                 <span>
                     <div class="section_1--background_circle">
