--- a/index.html
+++ b/index.html
@@ -123,11 +123,13 @@
             <div class="section_9--description">
                 <img src="text_9.svg" alt="confirmar asistencia">
                 <div>
-                    <button></button>
-                    <button></button>
                 </div>
             </div>
         </section>
+        <main>
+            <button></button>
+            <button></button>
+        </main>
        <img src="bg_stain.svg" alt="mancha">
        <img src="bg_stain.svg" alt="mancha">
     </div>
