--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
     <div class="section_12">
         <section>
             <div class="carousel" data-carousel>
+                <img src="flores-en-conjunto.svg" alt="racimo">
+                <img src="flores-en-conjunto.svg" alt="racimo">
                 <button class="carousel-button prev" data-carousel-button="prev">&#10092;</button>
                 <button class="carousel-button next" data-carousel-button="next">&#10093;</button>
                 <ul data-slides>
