--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </span>
         </div>
         <img src="names.svg" alt="nombres de casados">
-        <img src="bg_stain.svg" alt="mancha">
-        <img src="bg_stain.svg" alt="mancha">
+        <img src="bg_stain.png" alt="mancha">
+        <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_3">
        <canvas id="section_canvas_3" ></canvas>
@@ -63,8 +63,8 @@
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
        <img src="married.svg"  alt="nos casamos">
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
@@ -77,8 +77,8 @@
             </div>
         </span>
         <p></p>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
@@ -86,16 +86,16 @@
             <div class="section_5--container_info">
             </div>
         </section>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
         <section>
             <img src="text_6.svg" alt="asistencia">
         </section>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
@@ -105,8 +105,8 @@
             </div>
         </section>
         <button></button>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
@@ -114,8 +114,8 @@
            <img src="text_8_fix.svg" alt="lugar de fiesta">
            <button></button>
         </section>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
@@ -130,8 +130,8 @@
             <button></button>
             <button></button>
         </main>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_10">
         <canvas id="section_canvas_10"></canvas>
@@ -144,8 +144,8 @@
         <main>
             <button></button>
         </main>
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_11">
         <canvas id="section_canvas_11"></canvas>
@@ -153,8 +153,8 @@
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
        <img src="table.svg"  alt="regalo">
-       <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
        <button></button>
     </div>
     <div class="section_12">
@@ -181,8 +181,8 @@
     <div class="section_13">
         <canvas id="section_canvas_13"></canvas>
         <img src="text_13.svg" alt="intineriario" class="img_hours">
-        <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+        <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_14">
         <canvas id="section_canvas_14"></canvas>
@@ -194,8 +194,8 @@
             <span class="section_2--background_card">
             </span>
         </div>
-        <img src="bg_stain.svg" alt="mancha">
-       <img src="bg_stain.svg" alt="mancha">
+        <img src="bg_stain.png" alt="mancha">
+       <img src="bg_stain.png" alt="mancha">
        <img src="last_img_3.svg" alt="final_invitation">
     </div>
 </body>
