--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
        <img src="married.svg"  alt="nos casamos">
        <img src="bg_stain.png" alt="mancha">
        <img src="bg_stain.png" alt="mancha">
+       <img src="medium_stick_green.png" alt="prueba" class="testing_img">
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
