--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </div>
     <div  class="section_2">
         <canvas id="section_canvas_2" ></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="white_leave.png" alt="roseta">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
        <div>
             <span class="section_2--background_card">
             </span>
