--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <div class="container_flower_r">
                 <img src="white_leave.png" alt="roseta">
                 <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
                 <img src="rosa.png" alt="roseta">
             </div>
         </aside>
