--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
         <canvas id="section_canvas_2" ></canvas>
         <aside class="box_flower_1">
             <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
                 <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
                 <img src="big_green_leave.png" alt="hoja verde">
                 <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
                 <img src="rosa.png" alt="roseta">
             </div>
         </aside>
