--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
                 <img src="rosa.png" alt="roseta">
             </div>
         </aside>
+        <aside class="center_flower_1">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_2">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
        <div>
             <span class="section_2--background_card">
             </span>
