--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
     </div>
     <div class="section_3">
        <canvas id="section_canvas_3" ></canvas>
+       <aside class="center_flower_square_1">
+        <div class="container_flower_c">
+            <img src="medium_stick_green.png" alt="hoja pequeña">
+            <img src="big_green_leave.png" alt="hoja verde">
+            <img src="little_stick_green.png" alt="hija pequeña">
+            <img src="white_leave.png" alt="roseta">
+            <img src="red_points_leave.png" alt="roseta">
+            <img src="rosa.png" alt="roseta">
+        </div>
+    </aside>
+    <aside class="center_flower_square_2">
+        <div class="container_flower_c">
+            <img src="medium_stick_green.png" alt="hoja pequeña">
+            <img src="big_green_leave.png" alt="hoja verde">
+            <img src="little_stick_green.png" alt="hija pequeña">
+            <img src="white_leave.png" alt="roseta">
+            <img src="red_points_leave.png" alt="roseta">
+            <img src="rosa.png" alt="roseta">
+        </div>
+    </aside>
        <div ></div>
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
