--- a/index.html
+++ b/index.html
@@ -127,6 +127,22 @@
             <img src="rosa.png" alt="roseta">
         </div>
     </aside>
+    <aside class="bottom_flower_square_1">
+        <div class="container_flower_b">
+            <img src="little_stick_green.png" alt="hija pequeña">
+            <img src="tiny_leave.png" alt="roseta">
+            <img src="red_points_leave.png" alt="roseta">
+            <img src="white_leave.png" alt="roseta">
+        </div>
+    </aside>
+    <aside class="bottom_flower_square_2">
+        <div class="container_flower_b_2">
+            <img src="tiny_leave_2.png" alt="roseta" >
+            <img src="little_stick_green.png" alt="hija pequeña">
+            <img src="red_points_leave.png" alt="roseta">
+            <img src="white_leave.png" alt="roseta">
+        </div>
+    </aside>
        <div ></div>
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
