--- a/index.html
+++ b/index.html
@@ -152,6 +152,54 @@
     </div>
     <div class="section_4">
         <canvas id="section_canvas_4"></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="box_flower_2">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_1">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_2">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <span >
             <div class="section_2--background_card">
             </div>
@@ -175,6 +223,34 @@
     </div>
     <div class="section_6">
         <canvas id="section_canvas_6"></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="box_flower_2">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <section>
             <img src="text_6.svg" alt="asistencia">
         </section>
