--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@
     </div>
     <div class="section_5">
         <canvas id="section_canvas_5"></canvas>
+        <aside class="top_flower_1">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="rosa.png" alt="roseta">
+
+            </div>
+        </aside>
         <section>
             <div class="section_5--container_info">
             </div>
