--- a/index.html
+++ b/index.html
@@ -219,8 +219,20 @@
                 <img src="medium_stick_green.png" alt="hoja pequeña">      
                 <img src="little_stick_green.png" alt="hija pequeña">
                 <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
                 <img src="rosa.png" alt="roseta">
 
+            </div>
+        </aside>
+        <aside class="top_flower_2">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
             </div>
         </aside>
         <section>
@@ -268,6 +280,26 @@
     </div>
     <div class="section_7">
         <canvas id="section_canvas_7"></canvas>
+        <aside class="top_flower_1">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="top_flower_2">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <section>
             <div class="section_7--container_info">
                 <img src="lugar_2.svg" alt="informacion" >
@@ -279,6 +311,34 @@
     </div>
     <div class="section_8">
         <canvas id="section_canvas_8"></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="box_flower_2">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <section>
            <img src="text_8_fix.svg" alt="lugar de fiesta">
            <button></button>
@@ -288,6 +348,26 @@
     </div>
     <div class="section_9">
         <canvas id="section_canvas_9"></canvas>
+        <aside class="top_flower_1">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="top_flower_2">
+            <div class="container_flower_t">
+                <img src="medium_stick_green.png" alt="hoja pequeña">      
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <section>
             <div class="section_9--description">
                 <img src="text_9.svg" alt="confirmar asistencia">
@@ -304,6 +384,54 @@
     </div>
     <div class="section_10">
         <canvas id="section_canvas_10"></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="box_flower_2">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_1">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_2">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <div>
             <span class="section_2--background_card"></span>
         </div>
@@ -318,6 +446,42 @@
     </div>
     <div class="section_11">
         <canvas id="section_canvas_11"></canvas>
+        <aside class="center_flower_square_1">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_square_2">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="bottom_flower_square_1">
+            <div class="container_flower_b">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="tiny_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="bottom_flower_square_2">
+            <div class="container_flower_b_2">
+                <img src="tiny_leave_2.png" alt="roseta" >
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+            </div>
+        </aside>
         <div ></div>
        <div ></div>
        <img src="novios.png" alt="foto de la pareja">
@@ -349,12 +513,76 @@
     </div>
     <div class="section_13">
         <canvas id="section_canvas_13"></canvas>
+        <aside class="box_flower_1">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="box_flower_2">
+            <div class="container_flower_r">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="tiny_leave.png" alt="hoja pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
         <img src="text_13.svg" alt="intineriario" class="img_hours">
         <img src="bg_stain.png" alt="mancha">
        <img src="bg_stain.png" alt="mancha">
     </div>
     <div class="section_14">
         <canvas id="section_canvas_14"></canvas>
+        <aside class="center_flower_1_f">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="center_flower_2_f">
+            <div class="container_flower_c">
+                <img src="medium_stick_green.png" alt="hoja pequeña">
+                <img src="big_green_leave.png" alt="hoja verde">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="white_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="rosa.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="bottom_flower_square_1">
+            <div class="container_flower_b">
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="tiny_leave.png" alt="roseta">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+            </div>
+        </aside>
+        <aside class="bottom_flower_square_2">
+            <div class="container_flower_b_2">
+                <img src="tiny_leave_2.png" alt="roseta" >
+                <img src="little_stick_green.png" alt="hija pequeña">
+                <img src="red_points_leave.png" alt="roseta">
+                <img src="white_leave.png" alt="roseta">
+            </div>
+        </aside>
         <div>
             <span class="section_2--background_card">
             </span>
