--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
         <canvas id="logoCanvas" class="canvas_target"></canvas>
         <p>Uno de los dias mas importantes en nuestras vidas esta por llegar, faltan:</p>
         <div class="section_1--counter">
-            <div>
+            <div class="section_1--circle_counters">
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
                 <span>
                     <div class="section_1--background_circle">
                     </div>
