--- a/index.html
+++ b/index.html
@@ -23,32 +23,98 @@
                         <img src="rosa.png" alt="roseta">
                     </div>
                 </aside>
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
                 <span>
                     <div class="section_1--background_circle">
                     </div>
                 </span>
-                <canvas class="circle_times_animation_1"></canvas>
             </div>
-            <div>
+            <div class="section_1--circle_counters">
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
                 <span>
                     <div class="section_1--background_circle">
                     </div>
                 </span>
-                <canvas class="circle_times_animation_2"></canvas>
             </div>
-            <div>
+            <div class="section_1--circle_counters">
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
                 <span>
                     <div class="section_1--background_circle">
                     </div>
                 </span>
-                <canvas class="circle_times_animation_3"></canvas>
             </div>
-            <div>
+            <div class="section_1--circle_counters">
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
+                <aside class="section_1--counter--circle_counter_flowers">
+                    <div class="container_flower_c">
+                        <img src="medium_stick_green.png" alt="hoja pequeña">
+                        <img src="big_green_leave.png" alt="hoja verde">
+                        <img src="little_stick_green.png" alt="hija pequeña">
+                        <img src="white_leave.png" alt="roseta">
+                        <img src="red_points_leave.png" alt="roseta">
+                        <img src="rosa.png" alt="roseta">
+                    </div>
+                </aside>
                 <span>
                     <div class="section_1--background_circle">
                     </div>
                 </span>
-                <canvas class="circle_times_animation_4"></canvas>
             </div>
         </div>
         <img src="sobre-pattern.png" alt="sobre" class="section_1--card">
